--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -54,7 +54,7 @@ event-handler {{ handler.name }}
 {%                 endif %}
 {%             elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
 {%                 if handler.trigger_on_intf.ip is arista.avd.defined(true) or
-                     handler.trigger_on_intf.ip6 is arista.avd.defined(true) or
+                     handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
                      handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
 {%                     set trigger_on_intf_cli = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
 {%                     if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
@@ -63,7 +63,7 @@ event-handler {{ handler.name }}
 {%                     if handler.trigger_on_intf.ip is arista.avd.defined(true) %}
 {%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " ip" %}
 {%                     endif %}
-{%                     if handler.trigger_on_intf.ip6 is arista.avd.defined(true) %}
+{%                     if handler.trigger_on_intf.ipv6 is arista.avd.defined(true) %}
 {%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " ip6" %}
 {%                     endif %}
    {{ trigger_on_intf_cli }}
