Change heading for tags table.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/influxdb.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/influxdb.j2
@@ -35,7 +35,7 @@ Source Group Standard Disabled : {{ influxdb.source_group_standard_disabled }}
 {%     endif %}
 {%     if influxdb.tags is arista.avd.defined %}
 
-#### Tags Summary
+#### Telemetry Output Tags Summary
 
 | Tag | Value |
 | --- | ----- |
