--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -10,14 +10,70 @@
 
 #### Event Handler Summary
 
-| Handler | Action Type | Action | Trigger |
-| ------- | ----------- | ------ | ------- |
+| Handler | Action Type | Action | Trigger | Trigger Config |
+| ------- | ----------- | ------ | ------- | -------------- |
 {%     for handler in event_handlers | arista.avd.natural_sort('name') %}
 {%         set action = handler.action | replace('|', '\|') %}
 {%         if handler.action_type == 'bash' %}
 {%             set action = '<code>' ~ action ~ '</code>' %}
 {%         endif %}
-| {{ handler.name }} | {{ handler.action_type }} | {{ action }} | {{ handler.trigger }} |
+{%         if handler.trigger is arista.avd.defined("on-maintenance")
+            and handler.trigger_on_maintenance.operation is arista.avd.defined
+            and handler.trigger_on_maintenance.action is arista.avd.defined %}
+{%             set trigger_config =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
+{%             if handler.trigger_on_maintenance.bgp_peer is arista.avd.defined %}
+{%                 set trigger_config = trigger_config ~ " bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
+{%                 if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
+{%                     set trigger_config = trigger_config ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
+{%                 endif %}
+{%             elif handler.trigger_on_maintenance.interface is arista.avd.defined %}
+{%                 set trigger_config = trigger_config ~ " interface " ~ handler.trigger_on_maintenance.interface %}
+{%             elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
+{%                 set trigger_config = trigger_config ~ " unit " ~ handler.trigger_on_maintenance.unit %}
+{%             endif %}
+{%             if handler.trigger_on_maintenance.action is arista.avd.defined("after") or handler.trigger_on_maintenance.action is arista.avd.defined("before") %}
+{%                 set trigger_config = trigger_config ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
+{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("all") %}
+{%                 set trigger_config = trigger_config ~ " all" %}
+{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("begin") %}
+{%                 set trigger_config = trigger_config ~ " begin" %}
+{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("end") %}
+{%                 set trigger_config = trigger_config ~ " end" %}
+{%             endif %}
+{%         elif handler.trigger is arista.avd.defined("on-counters") %}
+{%             if handler.trigger_on_counters.poll_interval is arista.avd.defined %}
+{%                 set trigger_config = "poll interval " ~ handler.trigger_on_counters.poll_interval %}
+{%             endif %}
+{%             if handler.trigger_on_counters.condition is arista.avd.defined %}
+{%                 set trigger_config = trigger_config ~ "<br>condition" ~ handler.trigger_on_counters.condition %}
+{%             endif %}
+{%             if handler.trigger_on_counters.granularity_per_source is arista.avd.defined(true) %}
+{%                 set trigger_config = trigger_config ~ "<br>granularity per-source" %}
+{%             endif %}
+{%         elif handler.trigger is arista.avd.defined("on-logging") %}
+{%             if handler.trigger_on_logging.poll_interval is arista.avd.defined %}
+{%                 set trigger_config = "poll interval " ~ handler.trigger_on_logging.poll_interval %}
+{%             endif %}
+{%             if handler.trigger_on_logging.regex is arista.avd.defined %}
+{%                 set trigger_config = trigger_config ~ "<br>regex " ~ handler.trigger_on_logging.regex %}
+{%             endif %}
+{%         elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
+{%             if handler.trigger_on_intf.ip is arista.avd.defined(true) or
+                handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
+                handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+{%                 set trigger_config = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
+{%                 if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+{%                     set trigger_config = trigger_config ~ " operstatus" %}
+{%                 endif %}
+{%                 if handler.trigger_on_intf.ip is arista.avd.defined(true) %}
+{%                     set trigger_config = trigger_config ~ " ip" %}
+{%                 endif %}
+{%                 if handler.trigger_on_intf.ipv6 is arista.avd.defined(true) %}
+{%                     set trigger_config = trigger_config ~ " ip6" %}
+{%                 endif %}
+{%             endif %}
+{%         endif %}
+| {{ handler.name }} | {{ handler.action_type }} | {{ action }} | {{ handler.trigger }} | {{ trigger_config | arista.avd.default("-") }} |
 {%     endfor %}
 
 #### Event Handler Device Configuration
