--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ip-dhcp-relay.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ip-dhcp-relay.j2
@@ -4,7 +4,15 @@
  that can be found in the LICENSE file.
 #}
 {# eos - ip dhcp relay #}
-{% if ip_dhcp_relay.information_option is arista.avd.defined(true) %}
+{% if ip_dhcp_relay is arista.avd.defined() %}
 !
+{%     if ip_dhcp_relay.information_option is arista.avd.defined(true) %}
 ip dhcp relay information option
+{%     endif %}
+{%     if ip_dhcp_relay.always_on is arista.avd.defined(true) %}
+ip dhcp relay always-on
+{%     endif %}
+{%     if ip_dhcp_relay.all_subnets is arista.avd.defined(true) %}
+ip dhcp relay all-subnets default
+{%     endif %}
 {% endif %}
