--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -101,6 +101,8 @@
 {% include 'documentation/router-l2-vpn.j2' %}
 {# IP DHCP Relay #}
 {% include 'documentation/ip-dhcp-relay.j2' %}
+{# IPv6 DHCP Relay #}
+{% include 'documentation/ipv6-dhcp-relay.j2' %}
 {# IP DHCP Snooping #}
 {% include 'documentation/ip-dhcp-snooping.j2' %}
 {# IP NAT #}
