--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -30,6 +30,8 @@
 {% include 'eos/dhcp-relay.j2' %}
 {# IP DHCP Relay #}
 {% include 'eos/ip-dhcp-relay.j2' %}
+{# IPv6 DHCP Relay #}
+{% include 'eos/ipv6-dhcp-relay.j2' %}
 {# IP DHCP Snooping #}
 {% include 'eos/ip-dhcp-snooping.j2' %}
 {# dhcp servers #}
