--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -33,6 +33,41 @@ event-handler {{ handler.name }}
 {%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " end" %}
 {%                 endif %}
    {{ trigger_on_manitenance_cli }}
+{%             elif handler.trigger is arista.avd.defined("on-counters") %}
+   trigger on-counters
+{%                 if handler.trigger_on_counters.poll_interval is arista.avd.defined %}
+      poll interval {{ handler.trigger_on_counters.poll_interval }}
+{%                 endif %}
+{%                 if handler.trigger_on_counters.condition is arista.avd.defined %}
+      condition {{ handler.trigger_on_counters.condition }}
+{%                 endif %}
+{%                 if handler.trigger_on_counters.granularity_per_source is arista.avd.defined(true) %}
+      granularity per-source
+{%                 endif %}
+{%             elif handler.trigger is arista.avd.defined("on-logging") %}
+   trigger on-logging
+{%                 if handler.trigger_on_logging.poll_interval is arista.avd.defined %}
+      poll interval {{ handler.trigger_on_logging.poll_interval }}
+{%                 endif %}
+{%                 if handler.trigger_on_logging.regex is arista.avd.defined %}
+      regex {{ handler.trigger_on_logging.regex }}
+{%                 endif %}
+{%             elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
+{%                 if handler.trigger_on_intf.ip is arista.avd.defined(true) or
+                     handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
+                     handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+{%                     set trigger_on_intf_cli = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
+{%                     if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+{%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " operstatus" %}
+{%                     endif %}
+{%                     if handler.trigger_on_intf.ip is arista.avd.defined(true) %}
+{%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " ip" %}
+{%                     endif %}
+{%                     if handler.trigger_on_intf.ipv6 is arista.avd.defined(true) %}
+{%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " ip6" %}
+{%                     endif %}
+   {{ trigger_on_intf_cli }}
+{%                 endif %}
 {%             else %}
    trigger {{ handler.trigger }}
 {%             endif %}
