--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -53,12 +53,12 @@ router segment-security
             match interface {{ entry }}
 {%                     endfor %}
 {%                     if segment.definition.match_lists is arista.avd.defined %}
-{%                         for entry in segment.definition.match_lists %}
-{%                             if entry.address_family is arista.avd.defined and (entry.prefix is arista.avd.defined or entry.covered_prefix_list is arista.avd.defined ) %}
-{%                                 if entry.prefix is arista.avd.defined %}
-{%                                     set host_cli = "match prefix-" ~ entry.address_family ~ " " ~ entry.prefix %}
-{%                                 elif entry.covered_prefix_list is arista.avd.defined %}
-{%                                     set host_cli = "match covered prefix-list " ~ entry.address_family ~ " " ~ entry.covered_prefix_list %}
+{%                         for match_list in segment.definition.match_lists %}
+{%                             if match_list.address_family is arista.avd.defined and (match_list.prefix is arista.avd.defined or match_list.covered_prefix_list is arista.avd.defined ) %}
+{%                                 if match_list.prefix is arista.avd.defined %}
+{%                                     set host_cli = "match prefix-" ~ match_list.address_family ~ " " ~ match_list.prefix %}
+{%                                 elif match_list.covered_prefix_list is arista.avd.defined %}
+{%                                     set host_cli = "match covered prefix-list " ~ match_list.address_family ~ " " ~ match_list.covered_prefix_list %}
 {%                                 endif %}
             {{ host_cli }}
 {%                             endif %}
