--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -67,9 +67,9 @@ router segment-security
 {%                     if segment.policies is arista.avd.defined %}
          !
          policies
-{%                         for entry in segment.policies | arista.avd.natural_sort('source') %}
-{%                             if entry.source is arista.avd.defined and entry.policy is arista.avd.defined %}
-            from {{ entry.source }} policy {{ entry.policy }}
+{%                         for policy in segment.policies | arista.avd.natural_sort('source') %}
+{%                             if policy.source is arista.avd.defined and policy.policy is arista.avd.defined %}
+            from {{ policy.source }} policy {{ policy.policy }}
 {%                             endif %}
 {%                         endfor %}
 {%                     endif %}
