--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -16,10 +16,12 @@ router segment-security
 {%         for sequence in policy.sequence_numbers | arista.avd.natural_sort('sequence') %}
 {%             if sequence.sequence is arista.avd.defined and sequence.action is arista.avd.defined and sequence.application is arista.avd.defined %}
 {%                 set eos_cli = sequence.action %}
-{%                 if sequence.action == "redirect" and sequence.next_hop is arista.avd.defined %}
-{%                     set eos_cli = eos_cli ~ " next-hop " ~ sequence.next_hop %}
-{%                 else %}
-{%                     continue %}
+{%                 if sequence.action == "redirect" %}
+{%                     if sequence.next_hop is arista.avd.defined %}
+{%                         set eos_cli = eos_cli ~ " next-hop " ~ sequence.next_hop %}
+{%                     else %}
+{%                         continue %}
+{%                     endif %}
 {%                 endif %}
 {%                 if sequence.stateless | arista.avd.default(true) %}
 {%                     set eos_cli = eos_cli ~ " stateless" %}
@@ -32,40 +34,39 @@ router segment-security
 {%         endfor %}
    !
 {%     endfor %}
-{%     if router_segment_security.vrfs is arista.avd.defined %}
-{%         for vrf in router_segment_security.vrfs | arista.avd.natural_sort('name') %}
-   !
+{%     for vrf in router_segment_security.vrfs | arista.avd.natural_sort('name') %}
    vrf {{ vrf.name }}
-{%             for segment in vrf.segments %}
-{%                 if segment.name is arista.avd.defined %}
+{%         for segment in vrf.segments | arista.avd.natural_sort('name') %}
       segment {{ segment.name }}
          definition
-{%                     for interface in segment.definition.interfaces | arista.avd.natural_sort %}
+{%             for interface in segment.definition.interfaces | arista.avd.natural_sort %}
             match interface {{ interface }}
-{%                     endfor %}
-{%                     if segment.definition.match_lists is arista.avd.defined %}
-{%                         for match_list in segment.definition.match_lists %}
-{%                             if match_list.address_family is arista.avd.defined and (match_list.prefix is arista.avd.defined or match_list.covered_prefix_list is arista.avd.defined ) %}
-{%                                 if match_list.prefix is arista.avd.defined %}
-{%                                     set host_cli = "match prefix-" ~ match_list.address_family ~ " " ~ match_list.prefix %}
-{%                                 elif match_list.covered_prefix_list is arista.avd.defined %}
-{%                                     set host_cli = "match covered prefix-list " ~ match_list.address_family ~ " " ~ match_list.covered_prefix_list %}
-{%                                 endif %}
+{%             endfor %}
+{%             if segment.definition.match_lists is arista.avd.defined %}
+{%                 for match_list in segment.definition.match_lists %}
+{%                     if match_list.address_family is arista.avd.defined and (match_list.prefix is arista.avd.defined or match_list.covered_prefix_list is arista.avd.defined ) %}
+{%                         if match_list.prefix is arista.avd.defined %}
+{%                             set host_cli = "match prefix-" ~ match_list.address_family ~ " " ~ match_list.prefix %}
+{%                         elif match_list.covered_prefix_list is arista.avd.defined %}
+{%                             set host_cli = "match covered prefix-list " ~ match_list.address_family ~ " " ~ match_list.covered_prefix_list %}
+{%                         endif %}
             {{ host_cli }}
-{%                             endif %}
-{%                         endfor %}
 {%                     endif %}
-{%                     if segment.policies is arista.avd.defined %}
+{%                 endfor %}
+{%             endif %}
+{%             if segment.policies is arista.avd.defined %}
          !
          policies
-{%                         for policy in segment.policies | arista.avd.natural_sort('source') %}
-{%                             if policy.source is arista.avd.defined and policy.policy is arista.avd.defined %}
+{%                 for policy in segment.policies | arista.avd.natural_sort('source') %}
+{%                     if policy.source is arista.avd.defined and policy.policy is arista.avd.defined %}
             from {{ policy.source }} policy {{ policy.policy }}
-{%                             endif %}
-{%                         endfor %}
 {%                     endif %}
-{%                 endif %}
-{%             endfor %}
+{%                 endfor %}
+{%             endif %}
+{%             if not loop.last %}
+      !
+{%             endif %}
 {%         endfor %}
-{%     endif %}
+   !
+{%     endfor %}
 {% endif %}
