--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ip-dhcp-relay.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ip-dhcp-relay.j2
@@ -8,7 +8,7 @@
 
 ## IP DHCP Relay
 
-### IP DHCP Relay
+### IP DHCP Relay Summary
 {%     if ip_dhcp_relay.always_on is arista.avd.defined(true) %}
 
 DhcpRelay Agent is in always-on mode.
