--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ipv6-dhcp-relay.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ipv6-dhcp-relay.j2
@@ -8,7 +8,7 @@
 
 ## IPv6 DHCP Relay
 
-### IPv6 DHCP Relay
+### IPv6 DHCP Relay Summary
 {%     if ipv6_dhcp_relay.always_on is arista.avd.defined(true) %}
 
 DhcpRelay Agent is in always-on mode.
