Fixing eos template file.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
@@ -135,7 +135,7 @@
 
 | Profile Name | Secret Name | Secret Password | Receive Lifetime | Transmit Lifetime |
 | ------------ | ----------- | --------------- | ---------------- | ----------------- |
-{%         for profile in management_security.shared_secret_profiles | arista.avd.natural_sort("profile_name") %}
+{%         for profile in management_security.shared_secret_profiles | arista.avd.natural_sort("profile") %}
 {%             if profile.secrets is arista.avd.defined %}
 {%                 set temp = [] %}
 {%                 for secret in profile.secrets | arista.avd.natural_sort("name") %}
@@ -143,14 +143,14 @@
 {%                 endfor %}
 {%                 for secret in temp %}
 {%                     if temp.index(secret) == 0 and secret.lifetime.infinite is arista.avd.defined(true) %}
-| {{ profile.profile_name }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | infinite | infinite |
+| {{ profile.profile }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | infinite | infinite |
 {%                     elif temp.index(secret) == 0 and secret.receive_lifetime is arista.avd.defined and secret.transmit_lifetime is arista.avd.defined %}
 {%                         if secret.receive_lifetime.infinite is arista.avd.defined(true) and secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
-| {{ profile.profile_name }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | infinite | {{ secret.transmit_lifetime.start_date_time }} - {{ secret.transmit_lifetime.end_date_time }} |
+| {{ profile.profile }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | infinite | {{ secret.transmit_lifetime.start_date_time }} - {{ secret.transmit_lifetime.end_date_time }} |
 {%                         elif secret.transmit_lifetime.infinite is arista.avd.defined(true) and secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined %}
-| {{ profile.profile_name }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | {{ secret.receive_lifetime.start_date_time }} - {{ secret.receive_lifetime.end_date_time }} | infinite |
+| {{ profile.profile }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | {{ secret.receive_lifetime.start_date_time }} - {{ secret.receive_lifetime.end_date_time }} | infinite |
 {%                         elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined and secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
-| {{ profile.profile_name }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | {{ secret.receive_lifetime.start_date_time }} - {{ secret.receive_lifetime.end_date_time }} | {{ secret.transmit_lifetime.start_date_time }} - {{ secret.transmit_lifetime.end_date_time }} |
+| {{ profile.profile }} | {{ secret.name }} | {{ secret.secret | arista.avd.hide_passwords(hide_passwords) }} | {{ secret.receive_lifetime.start_date_time }} - {{ secret.receive_lifetime.end_date_time }} | {{ secret.transmit_lifetime.start_date_time }} - {{ secret.transmit_lifetime.end_date_time }} |
 {%                         endif %}
 {%                     endif %}
 {%                     if temp.index(secret) != 0 and secret.lifetime.infinite is arista.avd.defined(true) %}
